fix: FloatingActionButton text wrapping disable

--- a/src/components/Widgets/FloatingActionButton/FloatingActionButton.css
+++ b/src/components/Widgets/FloatingActionButton/FloatingActionButton.css
@@ -61,6 +61,7 @@
             margin-left 300ms var(--znui-emphasized-decelerate-motion),
             padding-right 300ms var(--znui-emphasized-decelerate-motion)
 ;
+    white-space: nowrap;
     max-width: 0;
     padding-right: 0;
     margin-left: -40%;
